--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
   "name": "proyecto_backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "product-manager.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -12,5 +10,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "moment": "^2.29.4"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
